src/objects/Opportunity_Change_History__c.object
<CustomObject>
    <description>Tracks Opportunity status/stage changes along with any other fields of interest</description>
    <fields>
        <fullName>Closed_On__c</fullName>
        <description>Date&amp;Time of new update to Stage</description>
        <inlineHelpText>Date&amp;Time of new update to Stage (this OCH is no longer reflects the current state of the opp)</inlineHelpText>
        <label>Closed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>New_Stage__c</fullName>
        <description>After update of opportunity, records the updated Stage</description>
        <label>New Stage</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Change History</relationshipLabel>
        <relationshipName>Opportunity_Change_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Previous_Stage__c</fullName>
        <description>Opportunity&apos;s stage before the update</description>
        <inlineHelpText>Opportunity&apos;s stage before the update</inlineHelpText>
        <label>Previous Stage</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Duration__c</fullName>
        <description># of Business Days spent in &quot;New Stage&quot;</description>
        <formula>(ROUND( 9 * (
   ( 5 * FLOOR( ( BLANKVALUE(DATEVALUE(Closed_On__c), TODAY()) - DATE( 1900, 1, 8) ) / 7) +
    MIN(5, 
     MOD( BLANKVALUE(DATEVALUE(Closed_On__c), TODAY()) - DATE( 1900, 1, 8), 7) +
     MIN( 1, 24 / 8 * ( MOD(  BLANKVALUE(Closed_On__c, NOW()) - DATETIMEVALUE( &apos;1900-01-08 13:00:00&apos; ), 1 ) ) )
    ) 
   )
 -
   ( 5 * FLOOR( ( DATEVALUE(  CreatedDate  ) - DATE( 1900, 1, 8) ) / 7) +
     MIN( 5,
      MOD( DATEVALUE( CreatedDate ) - DATE( 1996, 1, 1), 7 ) +
      MIN( 1, 24 / 8 * ( MOD( CreatedDate - DATETIMEVALUE( &apos;1900-01-08 13:00:00&apos; ), 1) ) )
    )
   ) 
  ), 
2 ))/9</formula>
        <inlineHelpText># of Business Days spent in &quot;New Stage&quot;</inlineHelpText>
        <label>Stage Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Opportunity Change History</label>
    <nameField>
        <displayFormat>OCH {0000} ({YYYY}-{MM}-{DD})</displayFormat>
        <label>Opportunity Change History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Change History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>